# kleiner-brauhelfer-2

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.CMake.md  README.md  build_linux32.sh  build_linux64.sh  build_macos.sh  build_openbsd.sh  build_win32.cmd  build_win64.cmd  kleiner-brauhelfer-2.pro
kleiner-brauhelfer/: CMakeLists.txt  data.qrc  definitionen.h  icon.icns  images.qrc  importexport.cpp  importexport.h  ispindel.cpp  kleiner-brauhelfer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  settings.cpp  settings.h  tababfuellen.cpp  tababfuellen.h  tababfuellen.ui  tababstract.cpp  tababstract.h  tabausruestung.cpp  tabausruestung.h  tabausruestung.ui  tabbewertung.cpp  tabbewertung.h  tabbewertung.ui  tabbewertungen.cpp  tabbewertungen.h  tabbewertungen.ui  tabbraudaten.cpp  tabbraudaten.h  tabbraudaten.ui  tabbrauuebersicht.cpp  tabbrauuebersicht.h  tabbrauuebersicht.ui  tabdatenbank.cpp  tabdatenbank.h  (+47 more)
kleiner-brauhelfer-core/: CMakeLists.txt  biercalc.cpp  biercalc.h  brauhelfer.cpp  brauhelfer.h  database.cpp  database.h  database_defs.h  database_update.cpp  importexport.cpp  importexport.h  kleiner-brauhelfer-core.pro  kleiner-brauhelfer-core_global.h  modelanhang.cpp  modelanhang.h  modelausruestung.cpp  modelausruestung.h  modelbewertungen.cpp  modelbewertungen.h  modeletiketten.cpp  modeletiketten.h  modelflaschenlabel.cpp  modelflaschenlabel.h  modelflaschenlabeltags.cpp  modelflaschenlabeltags.h  modelgeraete.cpp  modelgeraete.h  modelhauptgaerverlauf.cpp  modelhauptgaerverlauf.h  modelhefe.cpp  modelhefe.h  modelhefegaben.cpp  modelhefegaben.h  modelhopfen.cpp  modelhopfen.h  modelhopfengaben.cpp  modelhopfengaben.h  modelkategorien.cpp  modelkategorien.h  modelmaischplan.cpp  (+33 more)
kleiner-brauhelfer/charts/: chart3.cpp  chart3.h  chartabfuelldaten.cpp  chartabfuelldaten.h  chartausbeute.cpp  chartausbeute.h  chartbase.cpp  chartbase.h  chartbraudaten.cpp  chartbraudaten.h  charthopfen.cpp  charthopfen.h  chartmaischplan.cpp  chartmaischplan.h  chartmalz.cpp  chartmalz.h  chartrestextrakt.cpp  chartrestextrakt.h  chartview.cpp  chartview.h  chartviewabfuelldaten.cpp  chartviewabfuelldaten.h  chartviewausbeute.cpp  chartviewausbeute.h  chartviewbraudaten.cpp  chartviewbraudaten.h  chartviewrestextrakt.cpp  chartviewrestextrakt.h
kleiner-brauhelfer/commands/: setmodeldatacommand.cpp  setmodeldatacommand.h  undostack.cpp  undostack.h
kleiner-brauhelfer/data/: Hefe.csv  Hopfen.csv  Malz.csv  WeitereZutaten.csv  abfuelldaten.html  braudaten.html  kb_daten.sqlite  spickzettel.html  style_dunkel.css  style_hell.css  sudinfo.html  zusammenfassung.html
kleiner-brauhelfer/data/Rohstoffe/: Hefe.csv  Malz.csv  Wasserprofile.csv
kleiner-brauhelfer/data/Styles/: style_dark.qss  style_light.qss
kleiner-brauhelfer/data/Webview/: abfuelldaten.html  abfuelldaten_en.html  abfuelldaten_nl.html  abfuelldaten_se.html  abfuelldaten_sv.html  braudaten.html  braudaten_en.html  braudaten_nl.html  braudaten_se.html  braudaten_sv.html  spickzettel.html  spickzettel_en.html  spickzettel_nl.html  spickzettel_se.html  spickzettel_sv.html  style_dunkel.css  (+11 more)
kleiner-brauhelfer/dialogs/: dlgabout.cpp  dlgabout.h  dlgabout.ui  dlgabstract-inl.h  dlgabstract.cpp  dlgabstract.h  dlgausruestung.cpp  dlgausruestung.h  dlgausruestung.ui  dlgbewertungen.cpp  dlgbewertungen.h  dlgbewertungen.ui  dlgbierspende.cpp  dlgbierspende.h  dlgbierspende.ui  dlgbrauuebersicht.cpp  dlgbrauuebersicht.h  dlgbrauuebersicht.ui  dlgcheckupdate.cpp  dlgcheckupdate.h  dlgcheckupdate.ui  dlgconsole.cpp  dlgconsole.h  dlgconsole.ui  dlgdatabasecleaner.cpp  dlgdatabasecleaner.h  dlgdatabasecleaner.ui  dlgdatenbank.cpp  dlgdatenbank.h  dlgdatenbank.ui  dlgeinmaischtemp.cpp  dlgeinmaischtemp.h  dlgeinmaischtemp.ui  dlgeinstellungen.cpp  dlgeinstellungen.h  dlgeinstellungen.ui  dlgetikett.cpp  dlgetikett.h  dlgetikett.ui  dlghilfe.cpp  (+68 more)
kleiner-brauhelfer/helper/: htmlhighlighter.cpp  htmlhighlighter.h  ispindel.cpp  ispindel.h  mustache.cpp  obrama.cpp  obrama.h
kleiner-brauhelfer/iSpindel/: ispindel.cpp  ispindel.h  jsonsqlstatementmanager.cpp  jsonsqlstatementmanager.h
kleiner-brauhelfer/ispindel/: ispindel.cpp  ispindel.h
kleiner-brauhelfer/model/: bewertungtreeproxymodel.cpp  bewertungtreeproxymodel.h  checkboxdelegate.cpp  checkboxdelegate.h  comboboxdelegate.cpp  comboboxdelegate.h  datedelegate.cpp  datedelegate.h  datetimedelegate.cpp  datetimedelegate.h  doublespinboxdelegate.cpp  doublespinboxdelegate.h  dsvtablemodel.cpp  dsvtablemodel.h  ebcdelegate.cpp  ebcdelegate.h  ingredientnamedelegate.cpp  ingredientnamedelegate.h  linklabeldelegate.cpp  linklabeldelegate.h  phmalzdelegate.cpp  phmalzdelegate.h  proxymodelsudcolored.cpp  proxymodelsudcolored.h  ratingdelegate.cpp  ratingdelegate.h  readonlydelegate.cpp  readonlydelegate.h  restextraktdelegate.cpp  restextraktdelegate.h  rohstoffauswahlproxymodel.cpp  rohstoffauswahlproxymodel.h  spinboxdelegate.cpp  spinboxdelegate.h  stammwuerzedelegate.cpp  stammwuerzedelegate.h  sudnamedelegate.cpp  sudnamedelegate.h  sudwochedelegate.cpp  sudwochedelegate.h  (+6 more)
kleiner-brauhelfer/translations/: kbh_en.qm  kbh_en.qph  kbh_en.ts  kbh_nl  kbh_nl.qm  kbh_nl.qph  kbh_nl.ts  kbh_se.qm  kbh_se.ts  kbh_sv.qm  kbh_sv.qph  kbh_sv.ts  qtbase_nl.qm  qtbase_nl.ts  qtbase_sv.qm  qtbase_sv.ts
kleiner-brauhelfer/widgets/: chartview.cpp  chartview.h  checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  dateedit.cpp  dateedit.h  datetimeedit.cpp  datetimeedit.h  doublespinbox.cpp  doublespinbox.h  doublespinboxgrv.cpp  doublespinboxgrv.h  doublespinboxsud.cpp  doublespinboxsud.h  expanderpushbutton.cpp  expanderpushbutton.h  filterbutton.cpp  filterbutton.h  filterbuttonlager.cpp  filterbuttonlager.h  filterbuttonsud.cpp  filterbuttonsud.h  iconthemed.cpp  iconthemed.h  labelgrv.cpp  labelgrv.h  lineedit.cpp  lineedit.h  mainwindow.ui  proxystyle.cpp  proxystyle.h  pushbutton.cpp  pushbutton.h  radiobutton.cpp  radiobutton.h  spinbox.cpp  spinbox.h  spinboxsud.cpp  (+57 more)
(+30 files in other folders)
